# cyberimmune-systems-example-traffic-light-kos

./: CMakeLists.txt  cross-build-sim.sh  cross-build.sh
control_system/: CMakeLists.txt
control_system/src/: control_system.c
diagnostics/: CMakeLists.txt
diagnostics/src/: diagnostics.cpp  tcp_server.hpp
einit/: CMakeLists.txt
einit/src/: init.yaml.in  klog_entity.c  security.psl
klog_storage/: CMakeLists.txt
klog_storage/src/: klog_storage_entity.c
lights_gpio/: CMakeLists.txt
lights_gpio/src/: lights_gpio.c
resources/: CStatus.cdl  Diagnostics.edl  IStatus.idl  LightsGPIO.edl
resources/entities/: Diagnostics.edl  KlogEntity.edl  KlogStorageEntity.edl  LightsGPIO.edl
resources/interfaces/: CStatus.cdl  IStatus.idl
